--- a/css/custom.css
+++ b/css/custom.css
@@ -31,6 +31,11 @@
     text-transform: uppercase;
 }
 
+.social-nav {
+    margin: 0 auto;
+    width: 250px;
+}
+
 .social {
     list-style:none;
 }
@@ -293,7 +298,7 @@ media-post-video {
 
 ul, ol {
     padding: 0;
-    margin: 0 0 10px 25px;
+    /*margin: 0 0 10px 25px;*/
     list-style-type: none;
 }
 
