--- a/css/custom.css
+++ b/css/custom.css
@@ -223,7 +223,7 @@ body {
 .media-panel {
     margin-top: 0;
     max-width: 1000px;
-    margin-bottom: 60px;
+    margin-bottom: 70px;
     position: relative;
     /* height: 250px; */
     background-color: #ffffff;
@@ -232,9 +232,8 @@ body {
 }
 
 .media-boundingbox {
+    background: white;
     border: 0px;
-    border-top: 5px;
-    border-left: 5px;
     border-color: white;
     border-style: solid;
     overflow: auto;
@@ -261,6 +260,13 @@ body {
 .media-post {
     padding: 60px 60px;
     overflow: hidden;
+}
+
+.media-post-sound {
+    /* padding: 10px 10px; */
+    overflow: hidden;
+    /*margin-left: 8px;*/
+    padding-bottom: 20px;
 }
 
 .media-post-code {
@@ -307,25 +313,108 @@ a {
     text-decoration: none;
 }
 
-@media (max-width: 992px) {
-    .media-div-video {
-        background-color: #092140;
-        text-align: center;
-    }
+.content-container {
+    background: white;
+    padding: 20px;
+}
 
+.media-div-video {
+    text-align: center;
+    position: relative;
+    padding-bottom: 56.25%; /* 16:9 */
+    padding-top: 25px;
+    height: 0;
+}
+.media-div-video iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding: 60px;
+}
+
+.media-div-sound {
+    text-align: center;
+    position: relative;
+    padding-bottom: 56.25%; /* 16:9 */
+    padding-top: 25px;
+    height: 0;
+}
+.media-div-sound iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+}
+
+.dark-blue {
+    background-color: #092140;
+}
+
+.maroon {
+    background: #962D3E;
+}
+
+.gettysburg-beige {
+    background: #F2EBC7;
+}
+
+
+.media-post-video {
+    padding-top: 20px;
+    padding-bottom: 30px;
+    padding-left: 30px;
+    padding-right: 30px;
+}
+
+/* Large Devices, Wide Screens */
+@media only screen and (max-width : 1200px) {
     .media-post-video {
         padding: 30px 30px;
     }
+    .media-div-video iframe {
+        padding: 60px;
+    }
 }
 
-@media (max-width: 768px) {
-    .media-div {
-        background-color: #092140;
-        text-align: center;
+/* Medium Devices, Desktops */
+@media only screen and (max-width : 992px) {
+    .media-post-video {
+        padding: 15px 15px;
+    }
+    .media-div-sound iframe{
+        padding: 35px;
+    }
+    .media-div-video iframe {
+        padding: 30px;
+    }
+}
 
+/* Small Devices, Tablets */
+@media only screen and (max-width : 768px) {
+    .media-post-video {
+        padding: 10px 10px;
     }
 
-    .media-post {
-        padding: 30px 30px;
+    .media-div-sound iframe{
+        padding: 20px;
     }
+    .media-div-video iframe {
+        padding: 20px;
+    }
+}
+
+/* Extra Small Devices, Phones */
+@media only screen and (max-width : 480px) {
+    .media-div-video iframe {
+        padding: 10px;
+    }
+
+    .media-div-sound iframe{
+        padding: 10px;
+    }
+
 }
